# learn_rust

./: .gitignore  Cargo.toml  README.md  debug_guide.md  learning_progress.md  project_structure.md  quick_start_guide.md  rust_learning_plan.md  setup_directories.bat
benches/: benchmarks.rs
docs/: wiki_rayon.md  wiki_reqwest.md  wiki_serde.md  wiki_tokio.md
examples/: rayon_example.rs  reqwest_example.rs  serde_json_example.rs  tokio_tcp_server.rs
src/: lib.rs  main.rs
src/basics/: control_flow.rs  data_types.rs  functions.rs  variables.rs
src/collections/: collections.rs
src/concurrency/: concurrency.rs
src/error_handling/: error_handling.rs  result_option.rs
src/functional/: functional.rs
src/generics_traits/: generics.rs
src/ownership/: ownership.rs  references.rs  slices.rs
src/projects/: calculator.rs
src/structs_enums/: enums.rs  pattern_matching.rs  structs.rs
